<resources>
    <string name="app_name">Quiz-App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Şifre</string>
    <string name="e_mail">E-mail</string>
    <string name="forget_password">Şifreni mi unuttun?</string>
    <string name="add_question">SORU EKLE</string>
    <string name="question">Soru</string>
    <string name="enter_right_answer">Cevap 1</string>
    <string name="other_answer2">Cevap 2</string>
    <string name="other_answer3">Cevap 3</string>
    <string name="other_answer4">Cevap 4</string>
    <string name="btn_add">Ekle</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="total_wrong_str">Toplam Yanlış Sayısı:</string>
    <string name="total_correct_str">Toplam Doğru Sayısı:</string>
    <string name="total_score_str">Toplam Puan:</string>
    <string name="add_question_title">Cevap Ekle</string>
    <string name="is_correct_str">Doğru mu?</string>
    <string name="back_str">Geri Dön</string>
    <string name="next_btn_str">Sonraki</string>
    <string name="congrats">Tebrikler</string>
    <string name="nice_try">Daha iyi olabilirdi</string>

</resources>